--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation files('libs/agora-rtc-sdk.jar')
+    implementation 'io.agora.rtc:full-sdk:2.9.2'
 }
