--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,6 @@
         <activity
             android:name=".ui.activities.CameraActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            android:screenOrientation="sensor"/>
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
